syntax = "proto3";
package lum.network.millions;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/lum-network/chain/x/millions/types";

enum RedelegateState {
  option (gogoproto.goproto_enum_prefix) = true;

  REDELEGATE_STATE_UNSPECIFIED = 0 [ (gogoproto.enumvalue_customname) = "Unspecified" ];
  REDELEGATE_STATE_ICA_REDELEGATE = 1 [ (gogoproto.enumvalue_customname) = "IcaRedelegate" ];
  REDELEGATE_STATE_SUCCESS = 2 [ (gogoproto.enumvalue_customname) = "Success" ];
  REDELEGATE_STATE_FAILURE = 3 [ (gogoproto.enumvalue_customname) = "Failure" ];
}

message Redelegate {
  RedelegateState state = 1;
  RedelegateState error_state = 2;
}